--- a/index.html
+++ b/index.html
@@ -4,9 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Karshan Chopada</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="wrapper">
+        <div class="container">
+            <div class="navbar">
+                <div class="logo-container">
+                    <img src="./images/userAsset/NavLogo.jpg" class="logo" alt="">
+                    <div class="logo-text">ohn Doe</div>
+                </div>
+                <div class="nav-items">
+                    <div><a href="#projects">Projects</a></div>
+                    <div><a href="#skills">Skills</a></div>
+                    <div><a href="#contactme">Contact Me</a></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="hero-section">
+            <div class="hero-section-left">
+                <div class="hero-section-heading">Hi!! John Doe</div>
+                <div class="hero-section-sub-heading">
+                    I am a <span class="role"></span>
+                </div>
+                <div class="hero-section-description">
+                    I’m a software developer and here is my portfolio website. Here you’ll learn about my journey as a software developer.
+                </div>
+
+                <div class="btn-pink" id="button">Hire me</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
