--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
       <div class="hero-section">
         
+
+        <div class="fadded-text absolute">John Deo</div>
+
         <div class="hero-section-left">
           <div class="hero-section-heading">Hi!! John Doe</div>
           <div class="hero-section-sub-heading">
