--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="hero-section">
         
 
-        <div class="fadded-text absolute">John Deo</div>
+        <div class="fadded-text absolute">John DeoE</div>
 
         <div class="hero-section-left">
           <div class="hero-section-heading">Hi!! John Doe</div>
