--- a/index.html
+++ b/index.html
@@ -2,370 +2,78 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karshan Chopada</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Duty Planner</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
-
   <body>
-    <div id="wrapper">
+    <div class="wraper">
+      <div class="add-edit-model">
+        <h1>Add/Update Number</h1>
+        <form action="#">
+
+          <label for="driverBase">CDS NUMBER</label>
+
+          <input type="text" disabled  id="cdsNumber" /> 
+
+          <label for="driverBase">Driver Base Number</label>
+
+          <input list="driverBaseNum" id="driverBase" />
+
+          <datalist id="driverBaseNum" data-inputDriverBase> </datalist>
+
+          <label for="counductorBase">Counductor Base Number</label>
+
+          <input list="counductorBaseNum" id="counductorBase" />
+
+          <datalist id="counductorBaseNum" data-inputCounductorBase> </datalist>
+
+          <input type="submit" id="addUpdateCrew" value="Add/Update" />
+        </form>
+      </div>
+
       <div class="container">
-        <div class="navbar">
-          <div class="logo-container">
-            <img src="./images/userAsset/NavLogo.jpg" class="logo" alt="" />
-            <div class="logo-text">ohn Doe</div>
+        <div class="driver-container">
+          <ul class="driver-list" data-driverBaseNumber></ul>
+        </div>
+
+        <div class="dutylist-container">
+          <div class="schedule-container" id="cds-1">
+            <div class="sr-no">1</div>
+            <div class="crew-duty-number">1</div>
+            <div class="schedule-name">Lorem ipsum dolor</div>
+            <div class="driver">
+              <input type="text" name="driver" id="cds-1-driver" />
+            </div>
+            <div class="counductor">
+              <input type="text" name="counductor" id="cds-1-cond" />
+            </div>
+            <div class="btn-add">
+              <button id="add-edit" class="cds-1 addUpdateCrew">Add/Update</button>
+            </div>
           </div>
-          <div class="nav-items">
-            <div><a href="#projects">Projects</a></div>
-            <div><a href="#skills">Skills</a></div>
-            <div><a href="#contactme">Contact Me</a></div>
+          <div class="schedule-container" id="cds-2">
+            <div class="sr-no">2</div>
+            <div class="crew-duty-number">2</div>
+            <div class="schedule-name">Lorem ipsum dolor</div>
+            <div class="driver">
+              <input type="text" name="driver" id="cds-2-driver" />
+            </div>
+            <div class="counductor">
+              <input type="text" name="counductor" id="cds-2-cond" />
+            </div>
+            <div class="btn-add">
+              <button id="add-edit" class="cds-2 addUpdateCrew">Add/Update</button>
+            </div>
           </div>
         </div>
 
-        <div class="hero-section">
-          <div class="fadded-text absolute">John Deo</div>
-
-          <div class="hero-section-left">
-            <div class="hero-section-heading">Hi! John Doe</div>
-            <div class="hero-section-heading hero-section-sub-heading">
-              I am a <span class="role"></span>
-            </div>
-            <div class="hero-section-description">
-              I’m a software developer and here is my portfolio website. Here
-              you’ll learn about my journey as a software developer.
-            </div>
-
-            <div class="btn-pink" id="button">Hire me</div>
-          </div>
-
-          <div class="hero-section-right">
-            <div class="absolute icon icon-dots">
-              <img src="./images/userAsset/dots.png" alt="" />
-            </div>
-            <div class="absolute icon icon-cubes">
-              <img src="./images/userAsset/cube.png" alt="" />
-            </div>
-            <div class="absolute icon icon-circle">
-              <img src="./images/userAsset/circle.png" alt="" />
-            </div>
-            <div class="absolute icon icon-zigzak">
-              <img src="./images/userAsset/zigzags.png" alt="" />
-            </div>
-            <div class="absolute icon icon-plus">
-              <img src="./images/userAsset/plus.png" alt="" />
-            </div>
-            <div class="user-image">
-              <img src="./images/userAsset/UserImage.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="project-section">
-        <h2 class="page-header">Projects</h2>
-
-        <div class="project-container">
-          <div class="project-card" id="project1">
-            <div class="project-number project-number-right">01</div>
-            <div class="project-contect project-contect-left">
-              <div class="project-skills-contaoner">
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/Bash.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img src="images/stack/CSS.png" class="project-skills" alt="" />
-                <img
-                  src="images/stack/Docker.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/Bootstrap.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/Express.png"
-                  class="project-skills"
-                  alt=""
-                />
-                <img src="images/stack/Git.svg" class="project-skills" alt="" />
-                <img
-                  src="images/stack/Github.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/HTML.png"
-                  class="project-skills"
-                  alt=""
-                />
-              </div>
-              <h2 class="project-heading">Tint & Orange</h2>
-              <div class="project-subHeading">
-                Its is a car modification copany which provide you sheets to
-                protect your car from scratch
-              </div>
-              <div class="btn-group">Button</div>
-            </div>
-          </div>
-
-          <div class="project-card" id="project2">
-            <div class="project-number project-number-left">02</div>
-            <div class="project-contect project-contect-right">
-              <div class="project-skills-contaoner">
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-              </div>
-              <h2 class="project-heading">Tint & Orange</h2>
-              <div class="project-subHeading">
-                Its is a car modification copany which provide you sheets to
-                protect your car from scratch
-              </div>
-              <div class="btn-group">Button</div>
-            </div>
-          </div>
-
-          <div class="project-card" id="project3">
-            <div class="project-number project-number-right">03</div>
-            <div class="project-contect project-contect-left">
-              <div class="project-skills-contaoner">
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-              </div>
-              <h2 class="project-heading">Tint & Orange</h2>
-              <div class="project-subHeading">
-                Its is a car modification copany which provide you sheets to
-                protect your car from scratch
-              </div>
-              <div class="btn-group">Button</div>
-            </div>
-          </div>
-
-          <div class="project-card" id="project4">
-            <div class="project-number project-number-left">04</div>
-            <div class="project-contect project-contect-right">
-              <div class="project-skills-contaoner">
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-                <img
-                  src="images/stack/NodeJs.svg"
-                  class="project-skills"
-                  alt=""
-                />
-              </div>
-              <h2 class="project-heading">Tint & Orange</h2>
-              <div class="project-subHeading">
-                Its is a car modification copany which provide you sheets to
-                protect your car from scratch
-              </div>
-              <div class="btn-group">Button</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="stack-section">
-        <div class="stack-faded-text">Skills</div>
-        <div class="stack-left-part">
-          <div class="stack-heading">
-            <h1><span class="heading-first-letter">M</span>e and</h1>
-            <h1>My Tech Stack</h1>
-          </div>
-          <div class="stack-content">
-            <p>
-              Hi Everyone My name is Love Babbar Lorem ipsum dolor sit amet
-              consectetur adipisicing elit. Rerum pariatur quae suscipit cum,
-              vero ipsa quod tempore architecto voluptatem quam.
-            </p>
-            <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non
-              doloremque aspernatur, maiores voluptatum minus laudantium?
-              Perspiciatis accusamus minima porro dolores necessitatibus, magni
-              dolorem et qui veniam nulla sequi molestiae maxime.
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
-              quidem quos ullam veritatis voluptates tenetur qui ipsa nulla
-              culpa itaque?
-            </p>
-          </div>
-        </div>
-        <div class="stack-right-part">
-          <div class="images">
-            <img class="stack-image" src="images/stack/HTML.png" alt="" />
-            <img class="stack-image" src="images/stack/CSS.png" alt="" />
-            <img class="stack-image" src="images/stack/Javascript.svg" alt="" />
-            <img class="stack-image" src="images/stack/Express.png" alt="" />
-            <img class="stack-image" src="images/stack/Bootstrap.svg" alt="" />
-            <img class="stack-image" src="images/stack/Tailwind.png" alt="" />
-            <img class="stack-image" src="images/stack/Saas.svg" alt="" />
-            <img class="stack-image" src="images/stack/Docker.svg" alt="" />
-            <img class="stack-image" src="images/stack/Vercel.svg" alt="" />
-            <img class="stack-image" src="images/stack/Typescript.svg" />
-            <img class="stack-image" src="images/stack/React.png" alt="" />
-            <img class="stack-image" src="images/stack/Redux.svg" alt="" />
-            <img class="stack-image" src="images/stack/MongoDB.svg" alt="" />
-          </div>
-          <div class="bg"></div>
-        </div>
-      </div>
-
-      <div class="comtact-me-section">
-        <div class="container comtact-me">
-          <h1 class="contact-header">Contact Me</h1>
-          <h2 class="contact-sub-header">Questions, Thoughts, Or Just Want To Say Hello?</h2>
-          <div>
-            <form action="#" class="contact-form">
-              <input
-                type="text"
-                name=""
-                placeholder="Enter your name"
-                id=""
-                class="contact-form-input"
-              />
-              <input
-                type="email"
-                name=""
-                placeholder="Enter your email address"
-                id=""
-                class="contact-form-input"
-              />
-              <input
-                type="text"
-                name=""
-                placeholder="Enter your subject"
-                id=""
-                class="contact-form-input"
-              />
-              <textarea
-                name=""
-                placeholder="Enter your Message"
-                id=""
-                class="contact-form-input"
-                cols="30"
-                rows="10"
-              ></textarea>
-            </form>
-          </div>
+        <div class="conductor-container">
+          <ul class="conductor-list" data-conductorBaseNumber></ul>
         </div>
       </div>
     </div>
+
+    <script src="index.js"></script>
   </body>
 </html>
